[package]
name = "ppmwriter"
version = "0.1.0"
edition = "2021"
authors = ["Mason Soroka-Gill <masonsorokagill@pm.me>"]
repository = "https://github.com/SOROM2/ppmwriter"
description = "PPM writer for the binary PPM format"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
